Moving location outcome display logic to the transition for NAVIGATE_VOTING